Fix background color of selected artist on mobile

--- a/app/(site)/artists/component/artists/artists.scss
+++ b/app/(site)/artists/component/artists/artists.scss
@@ -185,7 +185,7 @@
     }
 
     &--active {
-      background-color: map.get(colors.$base-color, primary);
+      background-color: map.get(colors.$base-color, black);
       color: map.get(colors.$base-color, black);
     }
   }
